--- a/blog/static/app/content/blog.css
+++ b/blog/static/app/content/blog.css
@@ -5,8 +5,10 @@
     
 }
 body{
-    padding-left:15px
+    margin:0;
 }
+
+
 
 .page-header	{
 background-color:	#ff9400;
@@ -20,7 +22,9 @@ font-size:	36pt;
 text-decoration:	none;
 }
 .content	{
-margin-left:	40px;
+
+margin-right:20px;
+
 }
 h1,	h2,	h3,	h4	{
 font-family:	'Lobster',	cursive;
