--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <div class="page-header">
-        <h1><a href="#">Django Girl Blog</a></h1>
-
+    <div class="page-header">        
+        <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        <h1><a href="{% url 'blog.views.post_list' %}">Django Girl Blog</a></h1>
     </div>
 
     <div class="content container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 {% block content %}
                 {% endblock %}
 
