--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -12,7 +12,9 @@
 
 <body>
     <div class="page-header">        
+        <a href="{% url 'blog.views.post_draft' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
         <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        
         <h1><a href="{% url 'blog.views.post_list' %}">Django Girl Blog</a></h1>
     </div>
 
