--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -15,7 +15,7 @@
         <a href="{% url 'blog.views.post_draft' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
         <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         
-        <h1><a href="{% url 'blog.views.post_list' %}">Django Girl Blog</a></h1>
+        <h1><a href="{% url 'blog.views.post_list' %}">Django Girls Blog</a></h1>
     </div>
 
     <div class="content container">
