--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -32,6 +32,14 @@
 
                alert("ggg");
            });
+           $(window).scroll(function (e) {
+               if ($(window).scrollTop() < 51) {
+                   $("#top_banner").slideUp(1000)
+               } else {
+                   $("#top_banner").slideDown(1000)
+               }
+               
+           });
        });
        
         
@@ -40,7 +48,11 @@
 </head>
 
 <body>
-    <div class="page-header" style="overflow:auto">
+   <div id="top_banner" style="background-color:#ff9400; width:100%;  height:50px; position:fixed!important;z-index:10000;box-shadow:rgba(255, 148, 0, 0.2) 0 0 0 5px " >
+       <span style="font-family:Lobster;font-size:30px;font-weight:bolder; margin 0 auto;">Django Girl</span>
+
+   </div>
+    <div class="page-header" style="overflow:auto; padding-top:50px;">
 
         <div>
             {% if user.is_authenticated %}
