Addition of KMZ link

--- a/blog/templates/map.html
+++ b/blog/templates/map.html
@@ -28,6 +28,9 @@
 
 </head>
 <body>
+    
+<a href="../static/map/phase.kmz">phase.kmz</a>
+<a href="../static/map/practice.kmz">practice.kmz</a>
     <div id="map-canvas"></div>
 </body>
 </html>
