--- a/blog/templates/map.html
+++ b/blog/templates/map.html
@@ -22,6 +22,10 @@
           mapTypeId: google.maps.MapTypeId.ROADMAP
         }
         var map = new google.maps.Map(mapCanvas, mapOptions)
+          var ctaLayer = new google.maps.KmlLayer({
+              url: 'http://127.0.0.1:8000/static/map/cta.kml'
+          });
+          ctaLayer.setMap(map);
       }
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
@@ -31,6 +35,8 @@
     
 <a href="../static/map/phase.kmz">phase.kmz</a>
 <a href="../static/map/practice.kmz">practice.kmz</a>
+<a href="../static/map/cta.kml">../static/map/cta.kml</a>
+<a href="../static/map/practice 2_fromearth.kml">../static/map/practice 2_fromearth.kml</a>
     <div id="map-canvas"></div>
 </body>
 </html>
