Addition of map

--- a/blog/templates/map.html
+++ b/blog/templates/map.html
@@ -23,7 +23,7 @@
         }
         var map = new google.maps.Map(mapCanvas, mapOptions)
           var ctaLayer = new google.maps.KmlLayer({
-              url: 'http://127.0.0.1:8000/static/map/cta.kml'
+              url: "../static/map/cta.kml"
           });
           ctaLayer.setMap(map);
       }
