--- a/blog/templates/map.html
+++ b/blog/templates/map.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>FUTA</title>
-
+    
     <style>
       #map-canvas {
         width: 500px;
@@ -13,6 +13,7 @@
       }
     </style>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
+     {% load staticfiles %}
     <script>
       function initialize() {
         var mapCanvas = document.getElementById('map-canvas');
@@ -23,7 +24,7 @@
         }
         var map = new google.maps.Map(mapCanvas, mapOptions)
           var ctaLayer = new google.maps.KmlLayer({
-              url: "../static/map/cta.kml"
+              url: 'http://soliu.pythonanywhere.com/static/map/cta.kml'
           });
           ctaLayer.setMap(map);
       }
@@ -33,9 +34,9 @@
 </head>
 <body>
     
-<a href="../static/map/phase.kmz">phase.kmz</a>
+<a href='https://drive.google.com/file/d/0B65oNZ05gdUKZ09tblRSZW5heGM/view?usp=sharing'>phase.kmz</a>
 <a href="../static/map/practice.kmz">practice.kmz</a>
-<a href="../static/map/cta.kml">../static/map/cta.kml</a>
+<a href='{% static "map/cta.kml" %}'>../static/map/cta.kml</a>
 <a href="../static/map/practice 2_fromearth.kml">../static/map/practice 2_fromearth.kml</a>
     <div id="map-canvas"></div>
 </body>
