--- a/blog/templates/map.html
+++ b/blog/templates/map.html
@@ -24,7 +24,7 @@
         }
         var map = new google.maps.Map(mapCanvas, mapOptions)
           var ctaLayer = new google.maps.KmlLayer({
-              url: 'http://soliu.pythonanywhere.com/static/map/cta.kml'
+              url: 'http://soliu.pythonanywhere.com/static/map/practice 2_fromearth.kml'
           });
           ctaLayer.setMap(map);
       }
@@ -37,7 +37,7 @@
 <a href='https://drive.google.com/file/d/0B65oNZ05gdUKZ09tblRSZW5heGM/view?usp=sharing'>phase.kmz</a>
 <a href="../static/map/practice.kmz">practice.kmz</a>
 <a href='{% static "map/cta.kml" %}'>../static/map/cta.kml</a>
-<a href="../static/map/practice 2_fromearth.kml">../static/map/practice 2_fromearth.kml</a>
+<a href='{% static "map/practice 2_fromearth.kml" %}'>../static/map/practice 2_fromearth.kml</a>
     <div id="map-canvas"></div>
 </body>
 </html>
