--- a/blog/templates/map.html
+++ b/blog/templates/map.html
@@ -24,7 +24,7 @@
         }
         var map = new google.maps.Map(mapCanvas, mapOptions)
           var ctaLayer = new google.maps.KmlLayer({
-              url: 'http://soliu.pythonanywhere.com/static/map/phase.kmz'
+              url: 'https://www.facebook.com/mth.kml'
           });
           ctaLayer.setMap(map);
       }
