--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -49,7 +49,7 @@
 
 <body>
    <div id="top_banner" style="background-color:#ff9400; width:100%;  height:50px; position:fixed!important;z-index:10000;box-shadow:rgba(255, 148, 0, 0.2) 0 0 0 5px " >
-       <span style="font-family:Lobster;font-size:30px;font-weight:bolder; margin 0 auto;">Django Girl</span>
+       <span style="font-family:Lobster;font-size:30px;font-weight:bolder; margin: 0 auto;">Django Girl</span>
 
    </div>
     <div class="page-header" style="overflow:auto; padding-top:50px;">
@@ -78,7 +78,7 @@
                 </div>
                 <div>
                     <span id="btnlog"><a href="#" class="btn btn-default">Login</a></span>
-                    <span>or</a></span>
+                    <span>or</span>
                     <span id="reg"><a href="#" class="btn btn-default">Register</a></span>
                 </div>
                 <div   id="login_form" style="float:right; margin-top:10px  ">
