--- a/blog/templates/map.html
+++ b/blog/templates/map.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     
-<a href='{% static "map/phase.kmz" %}'>phase.kmz</a>
+<a href='{% static "map/phase.kmz" %}'>phasSe.kmz</a>
     <a href='{% static "map/legend1.png" %}'>legend1</a>
 <a href="../static/map/practice.kmz">practice.kmz</a>
 <a href='{% static "map/cta.kml" %}'>../static/map/cta.kml</a>
